--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=123
-spring.datasource.url=jdbc:postgresql://localhost:32768/modul153
+spring.datasource.url=jdbc:postgresql://localhost:32769/springSecurityJWTexample
 
 demo.app.jwtSecret= ======================SecretWordForJwt===========================
 demo.app.jwtExpirationMs=86400000
